Adição da classe OrcamentoViewModel

--- a/Views/Orcamento/Criar.cshtml
+++ b/Views/Orcamento/Criar.cshtml
@@ -18,7 +18,7 @@
             <input name="TelefoneCli" class="form-control"/><br/>
 
             <label>Celular:</label>
-            <input name="Celular" class="form-control"/><br/>
+            <input name="CelularCli" class="form-control"/><br/>
 
             <label>Rua:</label>
             <input name="Rua" class="form-control"/><br/>
@@ -27,7 +27,7 @@
             <input name="Bairro" class="form-control"/><br/>
 
             <label>Número:</label>
-            <input name="Número" class="form-control"/><br/>
+            <input name="Numero" class="form-control"/><br/>
 
             <label>Cidade:</label>
             <input name="Cidade" class="form-control"/><br/>
