--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -1,3 +1,5 @@
+@model List<AfReparosAutomotivos.Models.OrcamentoViewModel>
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -5,6 +7,15 @@
         <title>Orçamentos</title>
     </head>
     <body>
-        
+        <table class="table table-hover">
+
+            @foreach(var orcamento in Model) {
+            <tr>
+                <td>@orcamento.NomeCli</td>
+                <td>@orcamento.Modelo</td>
+            </tr>
+            }
+
+        </table>
     </body>
 </html>
