--- a/Views/Orcamentos/Index.cshtml
+++ b/Views/Orcamentos/Index.cshtml
@@ -1,37 +1,37 @@
+@model List<AfReparosAutomotivos.Models.Orcamentos>
+
 @{
-    ViewData["Title"] = "Orçamentos";
+    ViewData["Title"] = "Lista de Orçamentos";
 }
-<form action="">
-    <div>
-        <label for="idFuncionario">IdFuncionário:</label>
-        <input name="idFuncionario" type="number" placeholder="" required="true">
-    </div>
-    <div>
-        <label for="idCliente">IdCliente:</label>
-        <input name="idCliente" type="number" placeholder="" required="true">
-    </div>
-    <div>
-        <label for="dataCriacao">Data de criação:</label>
-        <input name="dataCriacao" type="date" placeholder="" required="true">
-    </div>
-    <div>
-        <label for="dataEntrega">Data de entrega:</label>
-        <input name="dataEntrega" type="date" placeholder="">
-    </div>
-    <div>
-        <label for="status">Status:</label>
-        <input name="status" type="number" placeholder="" min="1" max="3" step="1" required="true">
-    </div>
-    <div>
-        <label for="total">Total:</label>
-        <input name="total" type="number" placeholder="" required="true">
-    </div>
-    <div>
-        <label for="formaPagamento">Forma de pagamento:</label>
-        <input name="formaPagamento" type="text" placeholder="" required="true">
-    </div>
-    <div>
-        <label for="parcelas">Parcelas:</label>
-        <input name="parcelas" type="number" placeholder="">
-    </div>
-</form>
+
+<a asp-controller="Orcamentos" asp-action="Create" class="btn btn-primary">Novo Orçamento</a>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.First().idFuncionario)</th>
+            <th>@Html.DisplayNameFor(model => model.First().idCliente)</th>
+            <th>@Html.DisplayNameFor(model => model.First().dataCriacao)</th>
+            <th>@Html.DisplayNameFor(model => model.First().dataEntrega)</th>
+            <th>@Html.DisplayNameFor(model => model.First().status)</th>
+            <th>@Html.DisplayNameFor(model => model.First().total)</th>
+            <th>@Html.DisplayNameFor(model => model.First().formaPagamento)</th>
+            <th>@Html.DisplayNameFor(model => model.First().parcelas)</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.idFuncionario)</td>
+                <td>@Html.DisplayFor(modelItem => item.idCliente)</td>
+                <td>@Html.DisplayFor(modelItem => item.dataCriacao)</td>
+                <td>@Html.DisplayFor(modelItem => item.dataEntrega)</td>
+                <td>@Html.DisplayFor(modelItem => item.status)</td>
+                <td>@Html.DisplayFor(modelItem => item.total)</td>
+                <td>@Html.DisplayFor(modelItem => item.formaPagamento)</td>
+                <td>@Html.DisplayFor(modelItem => item.parcelas)</td>
+            </tr>
+        }
+    </tbody>
+</table>
