Pequenos avisos corrigidos
Avisos relativos a campos que podiam ser nulos corrigidos

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        @if (User.Identity.IsAuthenticated)
+                        @if (User.Identity?.IsAuthenticated == true)
                         {
                             <div class="right-align-item">
                                     <a asp-controller="Orcamentos" asp-action="Index" class="btn btn-primary">Orçamentos</a>
