--- a/Views/Orcamentos/Index.cshtml
+++ b/Views/Orcamentos/Index.cshtml
@@ -9,6 +9,7 @@
 <table class="table">
     <thead>
         <tr>
+            <th>@Html.DisplayNameFor(model => model.First().idOrcamento)</th>
             <th>@Html.DisplayNameFor(model => model.First().idFuncionario)</th>
             <th>@Html.DisplayNameFor(model => model.First().idCliente)</th>
             <th>@Html.DisplayNameFor(model => model.First().dataCriacao)</th>
@@ -23,6 +24,7 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>@Html.DisplayFor(modelItem => item.idOrcamento)</td>
                 <td>@Html.DisplayFor(modelItem => item.idFuncionario)</td>
                 <td>@Html.DisplayFor(modelItem => item.idCliente)</td>
                 <td>@Html.DisplayFor(modelItem => item.dataCriacao)</td>
@@ -31,6 +33,7 @@
                 <td>@Html.DisplayFor(modelItem => item.total)</td>
                 <td>@Html.DisplayFor(modelItem => item.formaPagamento)</td>
                 <td>@Html.DisplayFor(modelItem => item.parcelas)</td>
+                <td><a asp-action="Edit" asp-route-id="@item.idOrcamento">Editar</a></td>
             </tr>
         }
     </tbody>
