--- a/Views/Orcamentos/Index.cshtml
+++ b/Views/Orcamentos/Index.cshtml
@@ -4,8 +4,9 @@
     ViewData["Title"] = "Lista de Orçamentos";
 }
 
-<a asp-controller="Orcamentos" asp-action="Create" class="btn btn-primary">Novo Orçamento</a>
-
+<a asp-controller="Orcamentos" asp-action="Create" class="btn-login">Novo Orçamento</a>
+<br>
+<br>
 <table class="table">
     <thead>
         <tr>
