--- a/Views/Orcamentos/Index.cshtml
+++ b/Views/Orcamentos/Index.cshtml
@@ -33,7 +33,13 @@
                 <td>@Html.DisplayFor(modelItem => item.total)</td>
                 <td>@Html.DisplayFor(modelItem => item.formaPagamento)</td>
                 <td>@Html.DisplayFor(modelItem => item.parcelas)</td>
-                <td><a asp-action="Edit" asp-route-id="@item.idOrcamento">Editar</a></td>
+                <td><a asp-action="Edit" asp-route-id="@item.idOrcamento" class="btn btn-primary">Editar</a></td>
+                <td>
+                    <form asp-action="Delete" asp-route-id="@item.idOrcamento" method="post">
+                        <input type="hidden" name="idOrcamento" value="@item.idOrcamento">
+                        <button type="submit" class="btn btn-primary">Excluir</button>
+                    </form>
+                </td>
             </tr>
         }
     </tbody>
