--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,28 @@
     ViewData["Title"] = "Página Inicial";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container hero-section">
+    <div class="hero-content">
+        <!-- Imagem -->
+        <img src="~/images/logo-af-reparos.png" alt="Logo empresa af-reparos-automotivos" width=50" height=50"/>
+
+        <!-- Linha divisória -->
+        <div class="divider"></div>
+
+        <!-- Texto -->
+        <div class="text-content">
+            <h1>‘A SEGURANÇA ESTÁ ALÉM DA LATARIA BONITA’</h1>
+            <p>
+                Desde 2021 realizando reparos automotivos para diversos tipos de automóveis, sempre focando na excelência.<br><br>
+                Acreditamos que a organização e eficiência sejam chaves para a integridade com nossos clientes.<br><br>
+                Por isso, agora nossos orçamentos são armazenados e criados por essa plataforma.
+            </p>
+        </div>
+    </div>
 </div>
+
+<!--div class="text-center">
+    <h1>Bem-vindo ao AF Reparos Automotivos</h1>
+</div-->
 
 
