--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,22 +8,25 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AfReparosAutomotivos.styles.css" asp-append-version="true" />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">af-reparos-automotivos</a>
+                @* <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">HOME</a> *@
+                <!--a class="navbar-brand text-bg-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/images/logo-af-reparos.png" alt="Logo empresa af-reparos-automotivos" width=50" height=50"/>
+                </a-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Página Inicial</a>
-                        </li>
-                        @if (User.Identity.IsAuthenticated)
+                        @if (User.Identity?.IsAuthenticated == true)
                         {
                             <div class="right-align-item">
                                     <a asp-controller="Orcamentos" asp-action="Index" class="btn btn-primary">Orçamentos</a>
@@ -32,9 +35,9 @@
                         }
                         else
                         {
-                            <div class="right-align-item">
+                            <div class="right-align-item text-center">
                                 <form asp-controller="Login" asp-action="Index" method="post">
-                                    <button type="submit" class="btn btn-primary">Login</button>
+                                    <button type="submit" class="btn-login">Login</button>
                                 </form>
                             </div>
                         }
@@ -49,9 +52,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted text-center">
         <div class="container">
-            &copy; 2025 - af-reparos-automotivos - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - af-reparos-automotivos
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
