--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Login";
 }
 
-<form asp-controller="Login" asp-action="Logar" method="post">
+@* <form asp-controller="Login" asp-action="Logar" method="post">
     <label>Usuário:</label>
     <input type="text" name="username"/>
 
@@ -10,4 +10,16 @@
     <input type="password" name="senha"/>
 
     <input type="submit" value="Enviar"/>
+</form> *@
+
+<form asp-controller="Login" asp-action="Logar" method="post">
+  <div class="mb-3">
+    <label for="username" class="form-label">Usuário</label>
+    <input type="text" name="username" class="form-control">
+  </div>
+  <div class="mb-3">
+    <label for="senha" class="form-label">Senha</label>
+    <input type="password" name="senha" class="form-control">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
