--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -21,5 +21,5 @@
     <label for="senha" class="form-label">Senha</label>
     <input type="password" name="senha" class="form-control">
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
