--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -11,11 +11,11 @@
         <img src="~/images/logo-af-reparos.png" alt="Logo empresa af-reparos-automotivos" width=100" height=100"/>
 
         <form class="login-form" asp-controller="Login" asp-action="Logar" method="post">
-            <label>Usuário:</label>
-            <input type="text" name="username" required>
+            <label for="username">Usuário:</label>
+            <input type="text" id="username" name="username" required>
 
-            <label>Senha:</label>
-            <input type="password" name="senha" required>
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha" required>
 
             <button type="submit" class="btn-login">Entrar</button>
         </form>
