Conexões transferidas e adição de modal
Criação das pastas "Interfaces" e "Repositories" para melhor configuração e disposição dos arquivos e código do projeto. Controllers reconfigurados e reajustados para corresponder às interfaces e repositórios. Modal genérico para erros ou avisos adicionado. Script para exibição de modal adicionado.

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -21,3 +21,18 @@
         </form>
     </div>
 </div>
+
+@if (TempData["Mensagem"] is string jsonMessage)
+{
+    var modal = System.Text.Json.JsonSerializer.Deserialize<Modal>(jsonMessage);
+    <partial name="_Modal" model="modal"/>
+    @section Scripts
+    {
+        <script>
+            document.addEventListener('DOMContentLoaded', function ()
+            {
+                showGenericModal('@modal?.Id');
+            });
+        </script>
+    }
+} 
