--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,3 +2,5 @@
 @using AfReparosAutomotivos.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Mvc.ViewFeatures
+@using System.Text.Json
+@using AfReparosAutomotivos.Models.ViewModels
