--- a/Views/Orcamentos/Create.cshtml
+++ b/Views/Orcamentos/Create.cshtml
@@ -27,7 +27,7 @@
 
                     <div class="col-md-6">
                         <label asp-for="dataCriacao" class="form-label fw-semibold">Data de Criação</label>
-                        <input asp-for="dataCriacao" type="date" class="form-control" required>
+                        <input asp-for="dataCriacao" type="datetime-local" class="form-control" required value="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")">
                     </div>
 
                     <div class="col-md-6">
