opção de retornar à pagina Home ao clicar na logo. Estilização table orcamentos(cores, botões, text-center, espaçamento..)

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -8,7 +8,7 @@
             &#8592; <!-- seta para a esquerda -->
         </a>
 
-        <img src="~/images/logo-af-reparos.png" alt="Logo empresa af-reparos-automotivos" width=100" height=100"/>
+        <a href="/Home"><img src="~/images/logo-af-reparos.png" alt="Logo empresa af-reparos-automotivos" width=100" height=100"/></a>
 
         <form class="login-form" asp-controller="Login" asp-action="Logar" method="post">
             <label for="username">Usuário:</label>
