--- a/Views/Orcamentos/Index.cshtml
+++ b/Views/Orcamentos/Index.cshtml
@@ -4,40 +4,42 @@
     ViewData["Title"] = "Lista de Orçamentos";
 }
 
-<a asp-controller="Orcamentos" asp-action="Create" class="btn btn-primary">Novo Orçamento</a>
-
-<table class="table">
+<div class=""><a asp-controller="Orcamentos" asp-action="Create" class="btn btn-primary">Novo Orçamento</a></div> 
+<br>
+<table class="table table-striped">
     <thead>
-        <tr>
-            <th>@Html.DisplayNameFor(model => model.First().idOrcamento)</th>
-            <th>@Html.DisplayNameFor(model => model.First().idFuncionario)</th>
-            <th>@Html.DisplayNameFor(model => model.First().idCliente)</th>
-            <th>@Html.DisplayNameFor(model => model.First().dataCriacao)</th>
-            <th>@Html.DisplayNameFor(model => model.First().dataEntrega)</th>
-            <th>@Html.DisplayNameFor(model => model.First().status)</th>
-            <th>@Html.DisplayNameFor(model => model.First().total)</th>
-            <th>@Html.DisplayNameFor(model => model.First().formaPagamento)</th>
-            <th>@Html.DisplayNameFor(model => model.First().parcelas)</th>
+        <tr class="table-primary">
+            <th class="text-center" scope="col">@Html.DisplayNameFor(model => model.First().idOrcamento)</th>
+            <th class="text-center" scope="col">@Html.DisplayNameFor(model => model.First().idFuncionario)</th>
+            <th class="text-center" scope="col">@Html.DisplayNameFor(model => model.First().idCliente)</th>
+            <th class="text-center" scope="col">@Html.DisplayNameFor(model => model.First().dataCriacao)</th>
+            <th class="text-center" scope="col">@Html.DisplayNameFor(model => model.First().dataEntrega)</th>
+            <th class="text-center" scope="col">@Html.DisplayNameFor(model => model.First().status)</th>
+            <th class="text-center" scope="col">@Html.DisplayNameFor(model => model.First().total)</th>
+            <th class="text-center" scope="col">@Html.DisplayNameFor(model => model.First().formaPagamento)</th>
+            <th class="text-center" scope="col">@Html.DisplayNameFor(model => model.First().parcelas)</th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.idOrcamento)</td>
-                <td>@Html.DisplayFor(modelItem => item.idFuncionario)</td>
-                <td>@Html.DisplayFor(modelItem => item.idCliente)</td>
-                <td>@Html.DisplayFor(modelItem => item.dataCriacao)</td>
-                <td>@Html.DisplayFor(modelItem => item.dataEntrega)</td>
-                <td>@Html.DisplayFor(modelItem => item.status)</td>
-                <td>@Html.DisplayFor(modelItem => item.total)</td>
-                <td>@Html.DisplayFor(modelItem => item.formaPagamento)</td>
-                <td>@Html.DisplayFor(modelItem => item.parcelas)</td>
+                <td class="text-center">@Html.DisplayFor(modelItem => item.idOrcamento)</td>
+                <td class="text-center">@Html.DisplayFor(modelItem => item.idFuncionario)</td>
+                <td class="text-center">@Html.DisplayFor(modelItem => item.idCliente)</td>
+                <td class="text-center">@Html.DisplayFor(modelItem => item.dataCriacao)</td>
+                <td class="text-center">@Html.DisplayFor(modelItem => item.dataEntrega)</td>
+                <td class="text-center">@Html.DisplayFor(modelItem => item.status)</td>
+                <td class="text-center">@Html.DisplayFor(modelItem => item.total)</td>
+                <td class="text-center">@Html.DisplayFor(modelItem => item.formaPagamento)</td>
+                <td class="text-center">@Html.DisplayFor(modelItem => item.parcelas)</td>
                 <td><a asp-action="Edit" asp-route-id="@item.idOrcamento" class="btn btn-primary">Editar</a></td>
                 <td>
                     <form asp-action="Delete" asp-route-id="@item.idOrcamento" method="post">
                         <input type="hidden" name="idOrcamento" value="@item.idOrcamento">
-                        <button type="submit" class="btn btn-primary">Excluir</button>
+                        <button type="submit" class="btn btn-danger">Excluir</button>
                     </form>
                 </td>
             </tr>
