Adição de view para visualização

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/AfReparosAutomotivos.styles.css" asp-append-version="true" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -30,7 +30,7 @@
                         {
                             <div class="right-align-item">
                                     <a asp-controller="Orcamentos" asp-action="Index" class="btn btn-primary">Orçamentos</a>
-                                    <a asp-controller="Login" asp-action="Logout" class="btn btn-danger">Logout</a>
+                                    <a asp-controller="Login" asp-action="Logout" class="btn btn-danger">Sair</a>
                             </div>
                         }
                         else
