--- a/Views/Orcamentos/Edit.cshtml
+++ b/Views/Orcamentos/Edit.cshtml
@@ -51,7 +51,7 @@
                         <label asp-for="total" class="form-label fw-semibold">Valor</label>
                         <div class="input-group">
                             <span class="input-group-text">R$</span>
-                            <input asp-for="total" type="number" class="form-control" value="@(Model?.total)">
+                            <input asp-for="total" type="decimal" class="form-control" value="@(Model?.total)">
                         </div>
                         <span asp-validation-for="total" class="text-danger"></span>
                     </div>
@@ -70,8 +70,12 @@
                 </div>
 
                 <div class="d-flex justify-content-end gap-3 mt-4">
-                    <a asp-action="Index" class="btn btn-outline-secondary px-4">Voltar</a>
-                    <button type="submit" class="btn-login">Editar</button>
+                    <a asp-action="Index" class="btn btn-outline-secondary px-4">
+                        <i class="fas fa-arrow-left"></i> Voltar
+                    </a>
+                    <button type="submit" class="btn-login">
+                        <i class="fas fa-pencil-alt"></i> Editar
+                    </button>
                 </div>
             </form>
         </div>
