add action GetFilter e criação barra de pesquisa para filtrar pesquisas de orcamentos

--- a/Views/Orcamentos/Create.cshtml
+++ b/Views/Orcamentos/Create.cshtml
@@ -20,9 +20,9 @@
                         <legend class="float-none w-auto px-2 fs-6 fw-bold text-muted">Dados do Cliente</legend>
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <label asp-for="NomeCli" class="form-label fw-semibold">Nome do Cliente</label>
-                                <input asp-for="NomeCli" type="text" class="form-control" required />
-                                <span asp-validation-for="NomeCli" class="text-danger"></span>
+                                <label asp-for="nome" class="form-label fw-semibold">Nome do Cliente</label>
+                                <input asp-for="nome" type="text" class="form-control" required />
+                                <span asp-validation-for="nome" class="text-danger"></span>
                             </div>
                             <div class="col-md-6">
                                 <label asp-for="DocumentoCli" class="form-label fw-semibold">Documento do Cliente</label>
